# COMP4981Assignment1

./: README.md  main.c
COMP4981Assignment1/: .gitignore  CMakeLists.txt  Makefile  README.md  file_server.c
COMP4981Assignment1/include/: http.h  path.h  server.h  util.h
COMP4981Assignment1/src/: http.c  main.c  path.c  server.c  util.c
COMP4981Assignment1/tests/: test.sh
COMP4981Assignment1/www/: index.html
